fix alignment issues, add new projects

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -6,12 +6,12 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
-.container {
+/*.container {
   width: 90%;
   height: 95%;
   margin-left: 5%;
   margin-right: 5%;
-}
+}*/
 .header {
   text-align: center;
   margin-top: 2em;
@@ -24,26 +24,22 @@ body {
 }
 .header h2 {
   margin: .25em;
-  font-family: 'Antic Didone', serif;
 }
 .portfolio {
   text-align: center;
 }
 .portfolio h1 {
   color: #347A91;
-  text-shadow: 0px -1px 1px blue;
+  text-shadow: 0px 0px 3px #1A2D33;
 }
 
 .sample {
+  vertical-align: top;
+  height: 350px;
+  width: 350px;
   color: #1A2D33;
-  height: 30em;
-  width: 30em;
-  padding: 1em;
+  padding: 1.5em;
   display: inline-block;
-  margin-left: 1em;
-  margin-right: 1em;
-  margin-top: 1em;
-  margin-bottom: 1em;
   border-radius: 50%;
   background: radial-gradient(circle, rgba(208, 95, 33, 1), rgba(208, 95, 33, 0.9), rgba(208, 95, 33, 0.8));
   background: -webkit-radial-gradient(circle, rgba(208, 95, 33, 1), rgba(208, 95, 33, 0.9), rgba(208, 95, 33, 0.8));
@@ -52,16 +48,33 @@ body {
   box-shadow: 0px 0px 8px 5px rgba(208, 95, 33, 0.8), 0px 0px 16px 5px rgba(208, 95, 33, 0.4), 0px 0px 24px 5px rgba(208, 95, 33, 0.4);
 }
 
+.sample p {
+  font-size: 1em;
+  padding: 1em;
+  margin-top: 0px;
+}
+
+.sample h3 {
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+.sample a {
+  color: #1A2D33;
+}
+
 .sample img {
+  /*margin-top: 1em;*/
+  height: 8em;
   width: 70%;
   object-fit: contain;
   box-shadow: 0px 0px 8px 5px rgba(208, 95, 33, 0.1), 0px 0px 16px 5px rgba(208, 95, 33, 0.1);
   border-radius: 10px;
 }
 
-.vertical-pic {
+/*.vertical-pic {
   height: 11em;
-}
+}*/
 
 .debug {
   border: 1px solid red;
@@ -77,7 +90,7 @@ body {
   text-align: center;
 }
 
-.contact a:link {
+a:link {
   text-decoration: none;
 }
 
@@ -91,9 +104,10 @@ body {
 .contact-pod {
   display: inline-block;
   height: 2em;
-  width: 29%;
+  /*width: 29%;*/
   margin-top: 0em;
   margin-left: 1em;
   margin-right: 1em;
   margin-bottom: 1em;
+  text-shadow: 0px 0px 3px #1A2D33;
 }
